--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lucas haas cordeiro</title>
     <style>
+        
         body {
             display: flex;
             flex-direction: column;
-            height:100vh;
+            max-height:100vh;
         }
         header {
             display:flex;
