--- a/galeria.html
+++ b/galeria.html
@@ -45,6 +45,7 @@
             flex-direction:column;
             justify-content:center;
             align-items:center;
+            loading="lazy";
           }
         img {
             max-width: 600px;
