--- a/galeria.html
+++ b/galeria.html
@@ -79,10 +79,10 @@
         
         <nav>
             <ul>
-                <li><a href="https://haascordeiro.neocities.org">Principal</a></li>
+                <li><a href="index.html">Principal</a></li>
                 <li><a href="#">Literatura</a></li>
                 <li><a href="#">Crítica</a></li>
-                <li><a href="https://haascordeiro.neocities.org/galeria">Galeria</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
