--- a/literatura.html
+++ b/literatura.html
@@ -56,10 +56,13 @@
       }
     </style>
   </head>
-  
-  <body>
+    <header>
+      <link rel="stylesheet" href="/Presentations/h_sobre.css">
+    </header>
+    <body>
     <div class="container">
       <div class="sidebar">
+        <br>
         <a href="#">Sobre</a>
         <br>
         <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
@@ -81,8 +84,8 @@
         <a href="#">Galeria</a>
       </div>
       <div class="content">
-        <h1>Welcome to my website</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt consequat semper. Sed consequat, elit sed auctor auctor, velit neque semper nunc, sed maximus purus elit sed velit. Morbi lacinia ante et tortor finibus, quis fringilla enim congue. Integer sodales tellus a libero accumsan, eu malesuada justo congue. Vestibulum ac erat non enim molestie convallis vel vel nisi. In vitae hendrerit nisl. Duis nec elit odio. Sed in arcu id risus malesuada tempor. Etiam tempor, nulla quis aliquam dapibus, erat tortor vestibulum mauris, vel bibendum neque tortor sit amet nisl.</p>
+        <h1>Sobre</h1>
+        <p>Lucas Haas Cordeiro nasceu em Curitiba, em 1989. Desde pequeno se envolveu com escrita e literatura. Hoje trabalha como revisor, tradutor e professor de inglês. Entende que a literatura é um diálogo com os mortos, por meio da qual reformulamos o passado e construímos novas realidades.</p>
       </div>
     </div>
 
