--- a/literatura.html
+++ b/literatura.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <title>Navigation Demo</title>
+    <title>literatura</title>
     <style>
+     
       body {
         margin: 0;
         padding: 0;
@@ -14,7 +15,7 @@
 
       .sidebar {
         width: 20%;
-        background-color:darkgrey;
+        background-color: darkgrey;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -30,7 +31,7 @@
       .sidebar a {
         text-decoration: none;
         color: black;
-        font-size: 20px;
+        font-size: 25px;
         margin-bottom: 10px;
       }
 
@@ -50,17 +51,44 @@
 
       .content {
         width: 80%;
-        height: 100%;
         background-color: #fff;
         padding: 20px;
+        margin-right: 10%;
+        font-size: x-large;
       }
+
+      #header-iframe {
+        width: 100%;
+        height: 400px; /* Adjust the height as needed */
+        border: none;
+      }
+
+      a {
+        color:white
+        }
+
+      footer {
+            display:flex;
+            height:4vh;
+            padding:1vh;
+            align-items: center;
+            justify-content: center;
+            background-color:black;
+            color:white;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: small;
+            font-weight: bold;
+        }
+
     </style>
   </head>
-    <body>
+  <body>
+    <header>
+        <iframe id="header-iframe" src="reveal/h_sobre.html"></iframe>
+    </header>
     <div class="container">
       <div class="sidebar">
         <br>
-        <a href="#">Sobre</a>
         <br>
         <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
         <div class="submenu" id="literatura">
@@ -81,18 +109,23 @@
         <a href="#">Galeria</a>
       </div>
       <div class="content">
-        <h1>Sobre</h1>
-        <p>Lucas Haas Cordeiro nasceu em Curitiba, em 1989. Desde pequeno se envolveu com escrita e literatura. Hoje trabalha como revisor, tradutor e professor de inglês. Entende que a literatura é um diálogo com os mortos, por meio da qual reformulamos o passado e construímos novas realidades.</p>
+        <h2>Sobre</h2>
+        <p>Lucas Haas Cordeiro nasceu em Curitiba, em 1989. Desde pequeno se envolveu com escrita e literatura.</p>
+        <p>Hoje trabalha como revisor, tradutor e professor de inglês.</p>
+        <p>Entende que a literatura é um diálogo com os mortos, por meio da qual reformulamos o passado e construímos realidades.</p>
       </div>
     </div>
 
+    <footer>
+        <a href="mailto:luc.cordeiro@gmail.com"><em>luc.cordeiro@gmail.com<em></a>
+    </footer>
+
     <script>
       function toggleSubmenu(event, submenuId) {
-  event.preventDefault();
-  const submenu = document.getElementById(submenuId);
-  submenu.classList.toggle('show');
-}
-</script>
-</body>
+        event.preventDefault();
+        const submenu = document.getElementById(submenuId);
+        submenu.classList.toggle('show');
+      }
+    </script>
+  </body>
 </html>
-       
