--- a/crítica.html
+++ b/crítica.html
@@ -12,7 +12,7 @@
 
 		nav {
 			background-color: #ccc;
-			width: 20%;/crítica.html
+			width: 20%;
 			height: 100vh;
 			display: flex;
 			flex-direction: column;
