--- a/sussurro.html
+++ b/sussurro.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset='UTF-8'>
     <title>sussurro&codeína</title>
     <style>
      
@@ -10,8 +11,9 @@
 
       .container {
         display: flex;
-        min-height: 100vh;
+        min-height: auto;
         position: relative;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
       }
 
       .sidebar {
@@ -54,8 +56,10 @@
         width: 85%;
         background-color: #fff;
         padding: 20px;
+        margin-left: 5%;
         margin-right: 10%;
         font-size: large;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
       }
 
       .emphasis {
@@ -69,13 +73,15 @@
         display:flex;
         font-size:medium;
         font-style: italic;
-        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       img {
         max-width: 300px;
         height: auto;
-        margin-left: 30%;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       #header-iframe {
@@ -118,12 +124,12 @@
         <br>
         <a href="#" onclick="toggleSubmenu(event, 'literatura')"><u>Literatura</u></a>
         <div class="submenu" id="literatura">
-          <a href="#"><em>Sussuro&Codeína</em></a>
-          <a href="#"><em>Seis Vozes para a Fuga</em></a>
-          <a href="#"><em>Pavão de Seis Cores</em></a>
-          <a href="#"><em>Absoleto</em></a>
-          <a href="#"><em>Nouvelle World</em></a>
-          <a href="#"><em>Outros textos</em></a>
+          <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
+          <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
+          <a href="pavao de seis cores.html"><em>Pavão de Seis Cores</em></a>
+          <a href="absoleto.html"><em>Absoleto</em></a>
+          <a href="nouvelle world.html"><em>Nouvelle World</em></a>
+          <a href="outros textos.html"><em>Outros textos</em></a>
         </div>
         <br>
         <a href="galeria.html"><u>Galeria</u></a>
@@ -131,7 +137,8 @@
 
       <div class="content">
         
-        <h3>Resenha de Carlos Machado</h3>
+        <h3><u>Resenha de Carlos Machado</u></h3>
+        <h4><em>escritor, músico e professor de literatura</em></h4>
         <p>A sutileza de um sussurro. A acidez da codeína. A textura da paixão mergulhada em uísque e soda cáustica. O despetalar de flores. O intuito da eternidade. 
           Palavras que são como apaixonantes erupções de sentimentos; um poeta menor na idade e maior na poesia, que se encontra em plena ascensão rumo ao corpo:
           um livro que é um tapa na cara dos desavisados ou uma carícia no rosto da amada. Eis o poeta.</p>
