--- a/galeria.html
+++ b/galeria.html
@@ -7,13 +7,13 @@
       body {
         margin: 0;
         padding: 0;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
       }
 
       .container {
         display: flex;
         min-height: auto;
         position: relative;
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
       }
 
       .sidebar {
@@ -61,7 +61,6 @@
         padding: 20px;
         margin-right: 10%;
         font-size: large;
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
       }
 
       .emphasis {
@@ -96,7 +95,6 @@
         justify-content: center;
         background-color:black;
         color:white;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: small;
         font-weight: bold;
         padding:10px;
@@ -150,12 +148,7 @@
         <a href="mailto:luc.cordeiro@gmail.com"><em>luc.cordeiro@gmail.com<em></a>
     </footer>
 
-    <script>
-      function toggleSubmenu(event, submenuId) {
-        event.preventDefault();
-        const submenu = document.getElementById(submenuId);
-        submenu.classList.toggle('show');
-      }
-    </script>
+    <script src="script.js"></script>
+    
   </body>
 </html>
