new imgs folder

--- a/absoleto.html
+++ b/absoleto.html
@@ -61,7 +61,7 @@
         <div class="emphasis">para dizer do seu invisível.</div>
         <p>Assim, serve a palavra para que ela diga do seu impossível do dizer.</p>
         <br>
-          <img src="https://haascordeiro.neocities.org/images/galeria/absoleto_dentro.jpg">
+          <img src="images/absoleto_dentro.jpg">
         <br>
         <br>
         <div class="legenda"><em>os moralopagitas & os sintomas.</em></div>
