--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>Entende que a literatura é um diálogo com os mortos, por meio da qual reformulamos o passado e construímos realidades.</p>
         <br>
         <br>
-        <img src="https://haascordeiro.neocities.org/images/galeria/capa.JPG">
+        <img src="images/capa.JPG">
       <br>
       <br>
       <div class="legenda">phalophalha se queres, reviver é que deves:</div>
