--- a/nouvelle world.html
+++ b/nouvelle world.html
@@ -47,7 +47,7 @@
             Será que ele passará ileso à influência do amigo?</p>
         
         <br>
-          <img src="https://haascordeiro.neocities.org/images/galeria/nouvelle%20world.jpg">
+          <img src="images/nouvelle world.jpg">
         <br>
         <br>
         <div class="legenda">tu sabe muito bem que se tudo isso tá acontecendo agora,</div>
