--- a/outros textos.html
+++ b/outros textos.html
@@ -51,7 +51,7 @@
         <p>& de que matéria é feito o Ser Imaterial que recolhe as preces na alvorada, para silenciar, como o sepulcro, na Lua Nova do ser?</p>
         <p><em>quem és?</em></p>   
         <br>
-          <img src="https://haascordeiro.neocities.org/images/galeria/lucashaas.jpg">
+          <img src="images/lucashaas.jpg">
         <br>
         <br>
         <div class="legenda">a cabeça saltada, a devoção esquecida, mesmerizada, derrocada,</div>
