--- a/pavao de seis cores.html
+++ b/pavao de seis cores.html
@@ -39,7 +39,7 @@
           O aluno em questão informou ter recebido o material de um namorado de longa data, 
           um agente policial que não gostaria de ver aquele conjunto tão exótico ficar esquecido, 
           soterrado sob produções de menor valor literário."</p>
-          <img src="https://haascordeiro.neocities.org/images/galeria/pavao_.png">
+          <img src="images/pavao_.png">
         <br>
         <br>
         <div class="legenda">embora eu seja gabriel entre os pássaros,</div>
@@ -96,7 +96,7 @@
           pós-modernidade, um novo romance? A essencialmente semiótica ficção paratática de Lucas é uma ousada resposta a
           esta pergunta.</p>
         <br>
-        <img src="https://haascordeiro.neocities.org/images/galeria/pavao_lancamento.JPG">
+        <img src="images/pavao_lancamento.JPG">
         <br>
         <br>
         <div class="legenda">your theme as I saw it is this:</div>
