--- a/seis vozes para a fuga.html
+++ b/seis vozes para a fuga.html
@@ -40,7 +40,7 @@
           de uma fuga conturbada e múltipla, caracterizada pela profundidade psicológica e pelo confronto de persectivas. <em>Seis vozes para a Fuga</em>
           é um livro que se abre a incontáveis leituras, das quais o leitor por certo não sairá indiferente.</p>
         <br>
-          <img src="https://haascordeiro.neocities.org/images/galeria/seis_vozes.jpg">
+          <img src="images/seis_vozes.jpg">
         <br>
         <br>
         <div class="legenda">Di quest'onda che rifluische dai ricordi</div>
@@ -144,7 +144,7 @@
           impredictable e incomum, um dos arautos ele próprio desses novos tempos de escrita holográfica 
           que se anunciam nesta nova Era do Aquarismo. Está dado o recado.</p>
         <br>
-        <img src="https://haascordeiro.neocities.org/images/galeria/seis_vozes_lan%C3%A7amento.JPG">
+        <img src="images/seis_vozes_lançamento.JPG">
         <br>
         <br>
         <div class="legenda">A literatura combinatória & a leitura de um tempo caótico</div>
