--- a/sussurro.html
+++ b/sussurro.html
@@ -52,7 +52,7 @@
         <p>Lucas Haas Cordeiro prepara seu ópio e nos oferece de bandeja, uma <em>"poesia lírica crua mordaz picante maldizente
           irônica apaixonada"</em>. Deite, meu caro, esparrame-se por sobre o corpo das palavras. Caso sussurre de dor, use codeína.</p>
         <br>
-          <img src="https://haascordeiro.neocities.org/images/galeria/sussurro.jpg">
+          <img src="images/sussurro.jpg">
         <br>
         <br>
         <div class="legenda">para Tiago Cordeiro & Caetano Negrão, para os amores e ilusões.</div>
