--- a/galeria.html
+++ b/galeria.html
@@ -127,25 +127,25 @@
 
       <div class="content">
         <h3><em><u>Seis Vozes para a Fuga</u></em></h3>
-        <img src="https://haascordeiro.neocities.org/images/galeria/1.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/2.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/3.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/4.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/5.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/6.jpg">
+        <img src="images/1.jpg">
+        <img src="images/2.jpg">
+        <img src="images/3.jpg">
+        <img src="images/4.jpg">
+        <img src="images/5.jpg">
+        <img src="images/6.jpg">
         <div class="emphasis">***</div>
         <h3><em><u>Pavão de Seis Cores</u></em></h3>
-        <img src="https://haascordeiro.neocities.org/images/galeria/8.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/7.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/9.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/10.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/11.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/12.jpg">
-        <img src="https://haascordeiro.neocities.org/images/galeria/13.jpg">
+        <img src="images/8.jpg">
+        <img src="images/7.jpg">
+        <img src="images/9.jpg">
+        <img src="images/10.jpg">
+        <img src="images/11.jpg">
+        <img src="images/12.jpg">
+        <img src="images/13.jpg">
     </div>
 
     <footer>
-        <a href="mailto:luc.cordeiro@gmail.com"><em>luc.cordeiro@gmail.com<em></a>
+      <u><em>luc.cordeiro@gmail.com</em></u>
     </footer>
 
     <script src="script.js"></script>
