--- a/absoleto.html
+++ b/absoleto.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+  
 <html>
   
   <head>
     <meta charset='UTF-8'>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <title>absoleto</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
@@ -32,7 +36,16 @@
       <div class="content">
         <h3><u>Mídias</u></h3>
         <p>Acesse o audiobook da obra: <a href="https://soundcloud.com/user-628016153-328800658/sets/absoleto" target="_blank"><em>Absoleto_soundcloud</em></a>.</p>
+        <p>Amostra do poema <em>Ser-Hóstia da Palavra:</em></p>
+        <audio controls loop>
+          <source src="media/05.-Ser-hóstia-Da-Palavra.mp3"> 
+        </audio>
         <p>Interaja com as ilustrações digitais da obra: <a href="https://openprocessing.org/user/95506/?view=sketches&o=3#sketches" target="_blank"><em>Ilustrações</em></a>.</p>
+        <p>Amostra do poema <em>Sintoma n. 1:</em></p>
+        <video src="media/sintoma n1.mp4"
+        height="300px" controls autoplay muted>
+        </video>
+        <br>
         <br>
         <div class="emphasis">***</div>
         <br>
