--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+
 <html>
   
   <head>
     <meta charset='UTF-8'>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <title>lucas haas cordeiro</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
 
   <body>
+    
     <header>
         <iframe id="header-iframe" src="reveal/h_sobre.html"></iframe>
     </header>
+
     <div class="container">
       <div class="sidebar">
         <br>
