--- a/outros textos.html
+++ b/outros textos.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+
 <html>
 
   <head>
     <meta charset='UTF-8'>
     <title>outros textos</title>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="style.css"/>
   </head>
 
