--- a/galeria.html
+++ b/galeria.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+
 <html>
   <head>
     <meta charset='UTF-8'>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <title>galeria</title>
     <style>
      
