--- a/pavao de seis cores.html
+++ b/pavao de seis cores.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+
 <html>
   
   <head>
     <meta charset='UTF-8'>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <title>pavão de seis cores</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
