--- a/seis vozes para a fuga.html
+++ b/seis vozes para a fuga.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+
 <html>
 
   <head>
     <meta charset='UTF-8'>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <title>seis vozes para a fuga</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
