--- a/galeria.html
+++ b/galeria.html
@@ -81,8 +81,10 @@
 
       #header-iframe {
         width: 100%;
-        height: 35%;
-        border: none;
+      height: 35vh;
+      margin: 0;
+      padding: 0;
+      border: none;
       }
 
       a {
