--- a/galeria.html
+++ b/galeria.html
@@ -110,7 +110,7 @@
   </head>
   <body>
     <header>
-        <iframe id="header-iframe" src="reveal/h_galeria.html"></iframe>
+        <iframe id="header-iframe" src="topbar/h_galeria.html"></iframe>
     </header>
     <div class="container">
       <div class="sidebar">
