--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     
     <header>
-        <iframe id="header-iframe" src="reveal/h_sobre.html"></iframe>
+        <iframe id="header-iframe" src="topbar/h_sobre.html"></iframe>
     </header>
 
     <div class="container">
