--- a/sussurro.html
+++ b/sussurro.html
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-        <iframe id="header-iframe" src="reveal/h_sussurro.html"></iframe>
+        <iframe id="header-iframe" src="topbar/h_sussurro.html"></iframe>
     </header>
     <div class="container">
       <div class="sidebar">
