--- a/pavao de seis cores.html
+++ b/pavao de seis cores.html
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-        <iframe id="header-iframe" src="reveal/h_pavao.html"></iframe>
+        <iframe id="header-iframe" src="topbar/h_pavao.html"></iframe>
     </header>
     <div class="container">
       <div class="sidebar">
