--- a/seis vozes para a fuga.html
+++ b/seis vozes para a fuga.html
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-        <iframe id="header-iframe" src="reveal/h_seis_vozes.html"></iframe>
+        <iframe id="header-iframe" src="topbar/h_seis_vozes.html"></iframe>
     </header>
     <div class="container">
       <div class="sidebar">
