--- a/absoleto.html
+++ b/absoleto.html
@@ -18,9 +18,9 @@
       <div class="sidebar">
         <br>
         <br>
-        <a href="index.html"><u>Sobre</u></a>
+        <a href="index.html">Sobre</a>
         <br>
-        <a href="#" onclick="toggleSubmenu(event, 'literatura')"><u>Literatura</u></a>
+        <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
         <div class="submenu" id="literatura">
           <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
           <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
@@ -30,7 +30,7 @@
           <a href="outros textos.html"><em>Outros textos</em></a>
         </div>
         <br>
-        <a href="galeria.html"><u>Galeria</u></a>
+        <a href="galeria.html">Galeria</a>
       </div>
 
       <div class="content">
@@ -38,11 +38,11 @@
         <p>Acesse o audiobook da obra: <a href="https://soundcloud.com/user-628016153-328800658/sets/absoleto" target="_blank"><em>Absoleto_soundcloud</em></a>.</p>
         <p>Amostra do poema <em>Ser-Hóstia da Palavra:</em></p>
         <audio controls loop>
-          <source src="media/05.-Ser-hóstia-Da-Palavra.mp3"> 
+          <source src="images/05.-Ser-hóstia-Da-Palavra.mp3"> 
         </audio>
         <p>Interaja com as ilustrações digitais da obra: <a href="https://openprocessing.org/user/95506/?view=sketches&o=3#sketches" target="_blank"><em>Ilustrações</em></a>.</p>
         <p>Amostra do poema <em>Sintoma n. 1:</em></p>
-        <video src="media/sintoma n1.mp4"
+        <video src="images/sintoma n1.mp4"
         height="300px" controls autoplay muted>
         </video>
         <br>
