--- a/galeria.html
+++ b/galeria.html
@@ -116,9 +116,9 @@
       <div class="sidebar">
         <br>
         <br>
-        <a href="index.html"><u>Sobre</u></a>
+        <a href="index.html">Sobre</a>
         <br>
-        <a href="#" onclick="toggleSubmenu(event, 'literatura')"><u>Literatura</u></a>
+        <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
         <div class="submenu" id="literatura">
           <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
           <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
@@ -128,7 +128,7 @@
           <a href="outros textos.html"><em>Outros textos</em></a>
         </div>
         <br>
-        <a href="galeria.html"><u>Galeria</u></a>
+        <a href="galeria.html">Galeria</a>
       </div>
 
       <div class="content">
