--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div class="sidebar">
         <br>
         <br>
-        <a href="index.html"><u>Sobre</u></a>
+        <a href="index.html">Sobre</a>
         <br>
-        <a href="#" onclick="toggleSubmenu(event, 'literatura')"><u>Literatura</u></a>
+        <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
         <div class="submenu" id="literatura">
           <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
           <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
@@ -32,12 +32,11 @@
           <a href="outros textos.html"><em>Outros textos</em></a>
         </div>
         <br>
-        <a href="galeria.html"><u>Galeria</u></a>
+        <a href="galeria.html">Galeria</a>
       </div>
 
       <div class="content">
-        
-        <h3><u>Sobre</u></h3>
+        <h3><em>Sobre</em></h3>
         <p>Lucas Haas Cordeiro nasceu em Curitiba, em 1989. Desde pequeno se envolveu com escrita e literatura.</p>
         <ul>
           <li>Em 2006, lançou seu primeiro livro de poesia, <em>Sussuro&Codeína</em>.</li>
@@ -46,8 +45,11 @@
           <li>Lançou ainda <em>Absoleto</em> (poesia) e <em>Nouvelle World: nas Sendas do Abismo</em> (novela).</li>
         </ul>
         <p>Entende que a literatura é um diálogo com os mortos, por meio da qual reformulamos o passado e construímos realidades.</p>
-        <br>
-        <br>
+        <p>Entre em contato para aquisição de livros e demais serviços:</p>
+        <a href="https://api.whatsapp.com/send?phone=5541988647396" target="_blank">
+            <img src="images/whats.png" class="redes" width=50px>
+        </a>
+        </p>
         <img src="images/capa.JPG">
       <br>
       <br>
