--- a/nouvelle world.html
+++ b/nouvelle world.html
@@ -18,9 +18,9 @@
       <div class="sidebar">
         <br>
         <br>
-        <a href="index.html"><u>Sobre</u></a>
+        <a href="index.html">Sobre</a>
         <br>
-        <a href="#" onclick="toggleSubmenu(event, 'literatura')"><u>Literatura</u></a>
+        <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
         <div class="submenu" id="literatura">
           <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
           <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
@@ -30,12 +30,12 @@
           <a href="outros textos.html"><em>Outros textos</em></a>
         </div>
         <br>
-        <a href="galeria.html"><u>Galeria</u></a>
+        <a href="galeria.html">Galeria</a>
       </div>
 
       <div class="content">
         
-        <h3><u>Sobre</u></h3>
+        <h3>Sobre</h3>
         <p>Rafael embarca para a Austrália, para um dos principais festivais de música eletrônica do mundo. 
           É ano novo. Euforia, música, drogas, boas e más companhias. Será possível retornar para Porto Alegre ileso ao fluxo de mudanças? 
           Será possível que alguém não se transmute com uma experiência tão intensa? 
