--- a/topbar/h_sobre.html
+++ b/topbar/h_sobre.html
@@ -19,9 +19,9 @@
 			<div class="slides">
 				<section data-transition="convex">
 					<h2><a href="https://www.instagram.com/luc.haascordeiro/?hl=pt-br" target="_blank">Lucas Haas Cordeiro</a></h2>
-					<h3 class="fragment"><em>revisor</em></h3>
-					<h3 class="fragment"><em>tradutor</em></h3>
+					<h3 class="fragment"><em>escritor</em></h3>
 					<h3 class="fragment"><em>professor</em></h3>
+					<h3 class="fragment"><em>revisor/tradutor</em></h3>
 				</section>
 		</div>
 
