--- a/absoleto.html
+++ b/absoleto.html
@@ -14,27 +14,10 @@
     <header>
         <iframe id="header-iframe" src="topbar/h_absoleto.html"></iframe>
     </header>
+    
     <div class="container">
-      <div class="sidebar">
-        <br>
-        <br>
-        <a href="index.html">Sobre</a>
-        <br>
-        <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
-        <div class="submenu" id="literatura">
-          <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
-          <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
-          <a href="pavao de seis cores.html"><em>Pavão de Seis Cores</em></a>
-          <a href="absoleto.html"><em>Absoleto</em></a>
-          <a href="nouvelle world.html"><em>Nouvelle World</em></a>
-          <a href="outros textos.html"><em>Outros textos</em></a>
-        </div>
-        <br>
-        <a href="galeria.html">Galeria</a>
-      </div>
-
       <div class="content">
-        <h3><u>Mídias</u></h3>
+        <h3><em>Mídias</em></h3>
         <p>Acesse o audiobook da obra: <a href="https://soundcloud.com/user-628016153-328800658/sets/absoleto" target="_blank"><em>Absoleto_soundcloud</em></a>.</p>
         <p>Amostra do poema <em>Ser-Hóstia da Palavra:</em></p>
         <audio controls loop>
@@ -43,6 +26,7 @@
         <p>Interaja com as ilustrações digitais da obra: <a href="https://openprocessing.org/user/95506/?view=sketches&o=3#sketches" target="_blank"><em>Ilustrações</em></a>.</p>
         <p>Amostra do poema <em>Sintoma n. 1:</em></p>
         <video src="images/sintoma n1.mp4"
+        title ="topologia controlada por parâmetros"
         height="300px" controls autoplay muted>
         </video>
         <br>
@@ -74,17 +58,40 @@
         <div class="emphasis">para dizer do seu invisível.</div>
         <p>Assim, serve a palavra para que ela diga do seu impossível do dizer.</p>
         <br>
-          <img src="images/absoleto_dentro.jpg">
+          <img src="images/absoleto_dentro.jpg"
+          title = "livro feito à mão, sob encomenda">
         <br>
         <br>
         <div class="legenda"><em>os moralopagitas & os sintomas.</em></div>
         <br>
         <br>
+        <br>
+        <br>
+        <br>
       </div>
   
-    <footer>
-        <u><em>luc.cordeiro@gmail.com</em></u>
-    </footer>
+      <div class="sidebar-container">
+        <div class="sidebar">
+          <a href="index.html">Sobre</a>
+          <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
+          <div class="submenu" id="literatura">
+            <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
+            <p>|</p>
+            <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
+            <p>|</p>
+            <a href="pavao de seis cores.html"><em>Pavão de Seis Cores</em></a>
+            <p>|</p>
+            <a href="absoleto.html"><em>Absoleto</em></a>
+            <p>|</p>
+            <a href="nouvelle world.html"><em>Nouvelle World</em></a>
+            <p>|</p>
+            <a href="outros textos.html"><em>Outros textos</em></a>
+          </div>
+          <a href="galeria.html">Galeria</a>
+          <a href="contato.html">Contato</a>
+        </div>
+      </div>
+    </div>
 
     <script src="script.js"></script>
     
