--- a/contato.html
+++ b/contato.html
@@ -16,25 +16,18 @@
 
   <div class="container">
     <div class="content">
-      <h3><em>Sobre</em></h3>
-      <p>Lucas Haas Cordeiro nasceu em Curitiba, em 1989. Desde pequeno se envolveu com escrita e literatura.</p>
-      <ul>
-        <li>Em 2006, lançou seu primeiro livro de poesia, <em>Sussuro&Codeína</em>.</li>
-        <li>Em 2015, lançou seu primeiro romance, <em>Seis Vozes para a Fuga</em>.</li>
-        <li>Sua principal obra até aqui é <em>Pavão de Seis Cores</em>, romance lançado em 2017.</li>
-        <li>Lançou ainda <em>Absoleto</em> (poesia) e <em>Nouvelle World: nas Sendas do Abismo</em> (novela).</li>
-      </ul>
-      <p>Entende que a literatura é um diálogo com os mortos, por meio da qual reformulamos o passado e construímos realidades.</p>
-      <br>
-      <img src="images/capa.JPG"
-      title="evento Pavão de Seis Cores">
-      <br>
-      <br>
-      <div class="legenda">phalophalha se queres, reviver é que deves:</div>
-      <div class="legenda">e nunca tão cedo cessará a pharsa em nada</div>
-      <div class="legenda">sem que cíclica revenha fenixfinda</div>
-      <br>
-      <div class="legenda">james joyce</div>
+      <h3><em>Contato</em></h3>
+      <p>Entre em contato para aquisição de livros e demais serviços:</p>
+      <a href="https://api.whatsapp.com/send?phone=5541988647396" target="_blank">
+          <img src="images/whats.png" class="redes" width=50px>
+      </a>
+      <p>Mande sua mensagem:</p>
+      <form id="contact-form" method="POST" action="sendmail.php">
+        <input type="text" name="name" placeholder="Nome" required></p>
+        <input type="email" name="email" placeholder="Email" required></p> 
+        <textarea name="message" placeholder="Mensagem" required></textarea></p>
+        <button type="submit">Enviar</button>
+      </form>
     </div>
 
     <div class="sidebar-container">
@@ -55,7 +48,7 @@
           <a href="outros textos.html"><em>Outros textos</em></a>
         </div>
         <a href="galeria.html">Galeria</a>
-        <a href="contato.html">Contato</a>
+        <a href="">Contato</a>
       </div>
     </div>
   </div>
