--- a/sussurro.html
+++ b/sussurro.html
@@ -15,24 +15,6 @@
         <iframe id="header-iframe" src="topbar/h_sussurro.html"></iframe>
     </header>
     <div class="container">
-      <div class="sidebar">
-        <br>
-        <br>
-        <a href="index.html">Sobre</a>
-        <br>
-        <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
-        <div class="submenu" id="literatura">
-          <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
-          <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
-          <a href="pavao de seis cores.html"><em>Pavão de Seis Cores</em></a>
-          <a href="absoleto.html"><em>Absoleto</em></a>
-          <a href="nouvelle world.html"><em>Nouvelle World</em></a>
-          <a href="outros textos.html"><em>Outros textos</em></a>
-        </div>
-        <br>
-        <a href="galeria.html">Galeria</a>
-      </div>
-
       <div class="content">
         
         <h3><u>Resenha de Carlos Machado</u></h3>
@@ -56,17 +38,43 @@
         <p>Lucas Haas Cordeiro prepara seu ópio e nos oferece de bandeja, uma <em>"poesia lírica crua mordaz picante maldizente
           irônica apaixonada"</em>. Deite, meu caro, esparrame-se por sobre o corpo das palavras. Caso sussurre de dor, use codeína.</p>
         <br>
-          <img src="images/sussurro.jpg">
+        <a href="https://www.amazon.com.br/Sussurro-Code%C3%ADna-Lucas-Haas-Cordeiro/dp/857577333X"
+        target="_blank"
+        title="humor cáustico e salírico">
+        <img src="images/sussurro.jpg">
+        </a>
         <br>
         <br>
         <div class="legenda">para Tiago Cordeiro & Caetano Negrão, para os amores e ilusões.</div>
         <br>
         <br>
+        <br>
+        <br>
+        <br>
       </div>
   
-    <footer>
-      <u><em>luc.cordeiro@gmail.com</em></u>
-    </footer>
+      <div class="sidebar-container">
+        <div class="sidebar">
+          <a href="index.html">Sobre</a>
+          <a href="#" onclick="toggleSubmenu(event, 'literatura')">Literatura</a>
+          <div class="submenu" id="literatura">
+            <a href="sussurro.html"><em>Sussuro&Codeína</em></a>
+            <p>|</p>
+            <a href="seis vozes para a fuga.html"><em>Seis Vozes para a Fuga</em></a>
+            <p>|</p>
+            <a href="pavao de seis cores.html"><em>Pavão de Seis Cores</em></a>
+            <p>|</p>
+            <a href="absoleto.html"><em>Absoleto</em></a>
+            <p>|</p>
+            <a href="nouvelle world.html"><em>Nouvelle World</em></a>
+            <p>|</p>
+            <a href="outros textos.html"><em>Outros textos</em></a>
+          </div>
+          <a href="galeria.html">Galeria</a>
+          <a href="contato.html">Contato</a>
+        </div>
+      </div>
+    </div>
 
     <script src="script.js"></script>
     
