--- a/topbar/h_seis_vozes.html
+++ b/topbar/h_seis_vozes.html
@@ -19,7 +19,7 @@
 			<section>
 
 				<section data-transition="convex">
-					<h2><a href="https://loja.giostrieditora.com.br/index.php?route=product/product&product_id=592&search=seis+vozes" target="_blank">Seis Vozes para a Fuga</a></h2>
+					<h2><a href="https://www.amazon.com.br/Seis-Vozes-Para-Lucas-Cordeiro/dp/8581086160" target="_blank">Seis Vozes para a Fuga</a></h2>
 					<h3 class="fragment">2015</h3>
 					<h3 class="fragment">ficção</h3>
 				</section>
