galeria com títulos

--- a/galeria.html
+++ b/galeria.html
@@ -150,21 +150,21 @@
       
       <div class="content">
         <h3><em>Seis Vozes para a Fuga</em></h3>
-        <p><img src="images/1.jpg"></p>
-        <p><img src="images/2.jpg"></p>
-        <p><img src="images/3.jpg"></p>
-        <p><img src="images/4.jpg"></p>
-        <p><img src="images/5.jpg"></p>
+        <p><img src="images/1.jpg" title="Emerson nos braços de Augusto"></p>
+        <p><img src="images/2.jpg" title="Alberto Chiappetta: a espera"></p>
+        <p><img src="images/3.jpg" title="a invocação de Inès"></p>
+        <p><img src="images/4.jpg" title="vampiro de Curitiba"></p>
+        <p><img src="images/5.jpg" title="os livros queimam"></p>
         <p><img src="images/6.jpg"></p>
         <div class="emphasis">***</div>
         <h3><em>Pavão de Seis Cores</em></h3>
-        <p><img src="images/8.jpg"></p>
-        <p><img src="images/7.jpg"></p>
-        <p><img src="images/9.jpg"></p>
-        <p><img src="images/10.jpg"></p>
-        <p><img src="images/11.jpg"></p>
-        <p><img src="images/12.jpg"></p>
-        <p><img src="images/13.jpg"></p>
+        <p><img src="images/8.jpg" title="o pavão da religiosidade"></p>
+        <p><img src="images/7.jpg" title="o pavão do misticismo"></p>
+        <p><img src="images/9.jpg" title="o sonho infantil"></p>
+        <p><img src="images/10.jpg" title="o pacto"></p>
+        <p><img src="images/11.jpg" title="o enlace"></p>
+        <p><img src="images/12.jpg" title="a dança"></p>
+        <p><img src="images/13.jpg" title="a captura"></p>
         <br>
         <br>
         <br>
