--- a/galeria.html
+++ b/galeria.html
@@ -154,8 +154,8 @@
         <p><img src="images/2.jpg" title="Alberto Chiappetta: a espera"></p>
         <p><img src="images/3.jpg" title="a invocação de Inès"></p>
         <p><img src="images/4.jpg" title="vampiro de Curitiba"></p>
-        <p><img src="images/5.jpg" title="os livros queimam"></p>
-        <p><img src="images/6.jpg"></p>
+        <p><img src="images/5.jpg" title="a luz do universo"></p>
+        <p><img src="images/6.jpg" title="os livros queimam"></p>
         <div class="emphasis">***</div>
         <h3><em>Pavão de Seis Cores</em></h3>
         <p><img src="images/8.jpg" title="o pavão da religiosidade"></p>
