new contact page

--- a/contato.html
+++ b/contato.html
@@ -19,14 +19,20 @@
       <h3><em>Contato</em></h3>
       <p>Entre em contato para aquisição de livros e demais serviços:</p>
       <a href="https://api.whatsapp.com/send?phone=5541988647396" target="_blank">
-          <img src="images/whats.png" class="redes" width=50px>
+          <img src="images/whats.png" class="redes" title="whatsapp">
       </a>
-      <p>Mande sua mensagem:</p>
-      <form id="contact-form" method="POST" action="sendmail.php">
-        <input type="text" name="name" placeholder="Nome" required></p>
-        <input type="email" name="email" placeholder="Email" required></p> 
-        <textarea name="message" placeholder="Mensagem" required></textarea></p>
-        <button type="submit">Enviar</button>
+      <p>Acesse as redes sociais:</p>
+      <a href="https://www.linkedin.com/in/lucas-haas-cordeiro-53052692/" target="_blank">
+        <img src="images/linkedin.png" class="redes" title="linkedin">
+      </a>
+      <br>
+      <a href="https://www.instagram.com/luc.haascordeiro/?hl=pt-br" target="_blank">
+        <img src="images/instagram.png" class="redes" title="instagram">
+      </a>
+      <br>
+      <a href="https://www.facebook.com/lhaasc" target="_blank">
+        <img src="images/facebook.png" class="redes" title="facebook">
+      </a>
         <br>
         <br>
         <br>
