--- a/galeria.html
+++ b/galeria.html
@@ -6,139 +6,7 @@
     <meta charset='UTF-8'>
     <link rel="icon" type="image/png" href="images/icon.png">
     <title>galeria</title>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-
-      * {
-          font-family: 'Lora', serif;
-      }
-
-      body {
-          margin: 0;
-          padding: 0;
-        }
-      
-      .container {
-        display: flex;
-        min-height: 100vh;
-        flex-direction: column;
-        justify-content: flex-start;
-      }
-
-      .sidebar-container {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 5vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: darkgrey;
-        padding: 20px;
-        transition: width 0.5s;
-      }
-
-      .sidebar {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        width: 50%;
-      }
-
-      .sidebar a {
-        text-decoration: none;
-        color: black;
-        font-size: large;
-        margin-bottom: 10px;
-      }
-
-      .sidebar a:hover {
-        color: #555;
-      }
-
-      .submenu {
-        display: none;
-        position: absolute;
-        bottom: 100%;
-        left: 0;
-        width: 100%;
-        background-color: darkgrey;
-        padding: 20px;
-        transition: display 0.5s;
-      }
-
-      .submenu.show {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .submenu a {
-        text-decoration: none;
-        color: black;
-        font-size: medium;
-        margin: 0 10px;
-      }
-
-      .submenu a:hover {
-        color: #555;
-      }
-
-      .content {
-        background-color: #fff;
-        margin-left: 15%;
-        margin-right: 20%;
-        font-size: large;
-      }
-
-      .emphasis {
-        display: flex;
-        font-size: xx-large;
-        font-style: italic;
-        justify-content: center;
-      }
-
-      .legenda {
-        display: flex;
-        font-size: medium;
-        font-style: italic;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      img {
-        max-width: 100%;
-        height: auto;
-        padding: 20px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      #header-iframe {
-        width: 100%;
-        height: 35vh;
-        margin: 0;
-        padding: 0;
-        border: none;
-      }
-
-      #contact-form {
-        box-sizing: border-box;
-      }
-
-      input, textarea {
-        border: 1px solid;
-        padding: 1.5%;
-        font-size: medium;
-        width: 40%;
-      }
-
-      a {
-        color: crimson;
-      }
-  </style>
+    <link rel="stylesheet" href="style.css"/>
 
   </head>
   <body>
@@ -150,21 +18,24 @@
       
       <div class="content">
         <h3><em>Seis Vozes para a Fuga</em></h3>
-        <p><img src="images/1.jpg" title="Emerson nos braços de Augusto"></p>
-        <p><img src="images/2.jpg" title="Alberto Chiappetta: a espera"></p>
-        <p><img src="images/3.jpg" title="a invocação de Inès"></p>
-        <p><img src="images/4.jpg" title="vampiro de Curitiba"></p>
-        <p><img src="images/5.jpg" title="a luz do universo"></p>
-        <p><img src="images/6.jpg" title="os livros queimam"></p>
+        <p><img class="galeria" src="images/1.jpg" title="Emerson nos braços de Augusto"></p>
+        <p><img class="galeria" src="images/2.jpg" title="Alberto Chiappetta: a espera"></p>
+        <p><img class="galeria" src="images/3.jpg" title="a invocação de Inès"></p>
+        <p><img class="galeria" src="images/4.jpg" title="vampiro de Curitiba"></p>
+        <p><img class="galeria" src="images/5.jpg" title="a luz do universo"></p>
+        <p><img class="galeria" src="images/6.jpg" title="os livros queimam"></p>
         <div class="emphasis">***</div>
         <h3><em>Pavão de Seis Cores</em></h3>
-        <p><img src="images/8.jpg" title="o pavão da religiosidade"></p>
-        <p><img src="images/7.jpg" title="o pavão do misticismo"></p>
-        <p><img src="images/9.jpg" title="o sonho infantil"></p>
-        <p><img src="images/10.jpg" title="o pacto"></p>
-        <p><img src="images/11.jpg" title="o enlace"></p>
-        <p><img src="images/12.jpg" title="a dança"></p>
-        <p><img src="images/13.jpg" title="a captura"></p>
+        <p><img class="galeria" src="images/8.jpg" title="o pavão da religiosidade"></p>
+        <p><img class="galeria" src="images/7.jpg" title="o pavão do misticismo"></p>
+        <p><img class="galeria" src="images/9.jpg" title="o sonho infantil"></p>
+        <p><img class="galeria" src="images/10.jpg" title="o pacto"></p>
+        <p><img class="galeria" src="images/11.jpg" title="o enlace"></p>
+        <p><img class="galeria" src="images/12.jpg" title="a dança"></p>
+        <p><img class="galeria" src="images/13.jpg" title="a captura"></p>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
