--- a/contato.html
+++ b/contato.html
@@ -17,22 +17,47 @@
   <div class="container">
     <div class="content">
       <h3><em>Contato</em></h3>
+      <p>E-mail: luc.cordeiro@gmail.com</p>
       <p>Entre em contato para aquisição de livros e demais serviços:</p>
       <a href="https://api.whatsapp.com/send?phone=5541988647396" target="_blank">
-          <img src="images/whats.png" class="redes" title="whatsapp">
+          <img src="images/whats.png" title="whatsapp" width=50px>
       </a>
       <p>Acesse as redes sociais:</p>
-      <a href="https://www.linkedin.com/in/lucas-haas-cordeiro-53052692/" target="_blank">
-        <img src="images/linkedin.png" class="redes" title="linkedin">
-      </a>
-      <br>
-      <a href="https://www.instagram.com/luc.haascordeiro/?hl=pt-br" target="_blank">
-        <img src="images/instagram.png" class="redes" title="instagram">
-      </a>
-      <br>
-      <a href="https://www.facebook.com/lhaasc" target="_blank">
-        <img src="images/facebook.png" class="redes" title="facebook">
-      </a>
+      <div class="network">
+        <a href="https://www.linkedin.com/in/lucas-haas-cordeiro-53052692/" target="_blank">
+          <img src="images/linkedin.png" class="redes" title="linkedin">
+        </a>
+        <br>
+        <a href="https://www.instagram.com/luc.haascordeiro/?hl=pt-br" target="_blank">
+          <img src="images/instagram.png" class="redes" title="instagram">
+        </a>
+        <br>
+        <a href="https://www.facebook.com/lhaasc" target="_blank">
+          <img src="images/facebook.png" class="redes" title="facebook">
+        </a>
+      </div>
+      <p>► Escritor e criador de conteúdo:</p>
+      <ul>
+        <li>literatura</li>
+        <li>psicanálise</li>
+      </ul>
+      <p>► Professor de inglês:</p>
+      <ul>
+        <li>aulas em grupo</li>
+        <li>aulas individuais</li>
+        <li>experiência com TOEFL e IELTS</li>
+        <li>+10 anos de experiência com todas as idades</li>
+      </ul>
+      <p>► Revisor e tradutor (PT <> EN):</p>
+      <ul>
+        <li>materiais didáticos universitários</li>
+        <li>artigos científicos</li>
+        <li>monografias, teses e dissertações</li>
+        <li>textos técnicos</li>
+        <li>psicanálise</li>
+        <li>literatura</li>
+        <li>+10 anos de experiência</li>
+      </ul>
         <br>
         <br>
         <br>
