--- a/contato.html
+++ b/contato.html
@@ -25,15 +25,15 @@
       <p>Acesse as redes sociais:</p>
       <div class="network">
         <a href="https://www.linkedin.com/in/lucas-haas-cordeiro-53052692/" target="_blank">
-          <img src="images/linkedin.png" class="redes" title="linkedin">
+          <img src="images/linkedin.png" title="linkedin" width=130px>
         </a>
         <br>
         <a href="https://www.instagram.com/luc.haascordeiro/?hl=pt-br" target="_blank">
-          <img src="images/instagram.png" class="redes" title="instagram">
+          <img src="images/instagram.png" title="instagram" width=120px>
         </a>
         <br>
         <a href="https://www.facebook.com/lhaasc" target="_blank">
-          <img src="images/facebook.png" class="redes" title="facebook">
+          <img src="images/facebook.png" title="facebook" width=145px>
         </a>
       </div>
       <p>► Escritor e criador de conteúdo:</p>
